--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "ioredis": "^5.3.2",
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
