--- a/server/package.json
+++ b/server/package.json
@@ -25,22 +25,17 @@
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.3.2",
-    "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "multer": "^1.4.5-lts.1",
-    "serverless-http": "^3.2.0",
-    "sharp": "^0.33.2"
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/isomorphic-fetch": "^0.0.39",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/mocha": "^10.0.6",
     "@types/multer": "^1.4.11",
     "jest": "^29.7.0",
     "netlify-cli": "^17.16.3",
